# megatroll

./: .gitignore  readme.md
.devcontainer/: devcontainer.json
firmware/stm32_motor_control/: stm32_motor_control.ino
scripts/: attach_terminal.sh
src/ai_training/: benchmark.py  tracker_conf.yaml  tracker_test.ipynb
src/megajaw_brain/: package.xml  setup.py
src/megajaw_brain/megajaw_brain/: constants.py  controller_node.py  detector_node.py  fsm.py  fsm_node.py  to_target_controller_node.py  utils.py
src/megajaw_brain/static/: tracker_conf.yaml
src/megajaw_bringup/: CMakeLists.txt  package.xml
src/megajaw_bringup/config/: diff_drive_controller.yaml  gripper_controller.yaml  gz_bridge.yaml
src/megajaw_bringup/launch/: display.launch.py  gz.launch.py  hardware.launch.py
src/megajaw_bringup/worlds/: ai_training_world.sdf  modelled.sdf  simple_world.sdf
src/megajaw_description/: CMakeLists.txt  package.xml
src/megajaw_description/urdf/: body.xacro  camera.xacro  gz.ros2control.xacro  gz_plugins.xacro  inertials.xacro  materials.xacro  megajaw.xacro.urdf  pidirect.ros2control.xacro
src/megajaw_dummy/: package.xml  setup.cfg  setup.py
src/megajaw_hardware/: CMakeLists.txt  megajaw_hardware.xml  package.xml
src/megajaw_uart/: CMakeLists.txt  megajaw_uart_plugin.xml  package.xml
src/megajaw_uart/include/megajaw_uart/: MotorDriver.hpp
src/megajaw_uart/src/: MotorDriver.cpp  megajaw_uart_interface.cpp
src/megajaw_uart/xacro/: uart_ros2control.xacro
src/uart_bridge/: package.xml  setup.py
src/web_interface/: index.html  index.js  style.css
(+7 files in other folders)
